--- a/google_store/additional_queries.ipynb
+++ b/google_store/additional_queries.ipynb
@@ -177,6 +177,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 100%|██████████| 34266/34266 [00:03<00:00, 11181.04rows/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_category = \"\"\"\n",
+    "  SELECT\n",
+    "      CONCAT(fullVisitorId, CAST(visitId AS STRING)) AS unique_session_id,\n",
+    "      CASE\n",
+    "        WHEN totals.totalTransactionRevenue/1e6 < 30.83 THEN 'Q1'\n",
+    "        WHEN totals.totalTransactionRevenue/1e6 BETWEEN 30.83 AND 56.975 THEN 'Q2'\n",
+    "        WHEN totals.totalTransactionRevenue/1e6 BETWEEN 56.975 AND 116.96 THEN 'Q3'\n",
+    "        WHEN totals.totalTransactionRevenue/1e6 BETWEEN 116.96 AND 246.155 THEN 'Q4'\n",
+    "        ELSE 'outlier'\n",
+    "      END AS segment,\n",
+    "      product.v2ProductCategory AS product_category,\n",
+    "      product.v2ProductName AS product_name,\n",
+    "      product.productSKU AS product_sku,\n",
+    "      (product.productRevenue/1e6)/product.productQuantity AS product_price_valid,\n",
+    "      product.productQuantity AS product_quantity,\n",
+    "      product.productRevenue/1e6 AS product_revenue\n",
+    "  FROM\n",
+    "      `bigquery-public-data.google_analytics_sample.ga_sessions_*`\n",
+    "      , UNNEST(hits) AS hits\n",
+    "      , UNNEST(hits.product) AS product\n",
+    "  WHERE\n",
+    "      _TABLE_SUFFIX BETWEEN '20160801' AND '20170731'\n",
+    "      AND geoNetwork.country = 'United States'\n",
+    "      AND totals.totalTransactionRevenue IS NOT NULL\n",
+    "      AND productRevenue IS NOT NULL\n",
+    "      AND CONCAT(fullVisitorId, CAST(visitId AS STRING)) NOT IN ('19574589762938781001491423580', '19574589762938781001492527922')\n",
+    "\"\"\"\n",
+    "category = gbq.read_gbq(query_category, project_id = 'my-project-97639')\n",
+    "category.to_csv('google_category.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
